<resources>
    <string name="app_name">H Plus</string>
    <string name="cancel">Cancel</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data available</string>
    <string name="not_connect_device_network">Failed to communicate with device! Please replug the power cord of the device and try again.</string>
    <string name="enroll_title4">Name Your Device</string>
    <string name="enroll_scanning">Scanning</string>
    <string name="enroll_scanning_welcome">Requesting data, please wait</string>
    <string name="enroll_connecting">Connecting</string>
    <string name="enroll_home_wifi">home WIFI</string>
    <string name="enroll_networks">Available networks</string>
    <string name="enroll_next">Next</string>
    <string name="enroll_password">Password</string>
    <string name="enroll_hint_ssid">Enter network name</string>
    <string name="enroll_ssid_security">Network Security</string>
    <string name="enroll_done">Done</string>
    <string name="enroll_other">Other&#8230;</string>
    <string name="enroll_error">Operation failed! Please try again.</string>
    <string name="quit">Do you want to quit?</string>
    <string name="error_code_10">"Invalid Wi-Fi password input for last enrollment. Please ensure you input a correct password.</string>
    <string name="error_code_20">"The Wi-Fi name you entered last time cannot be found. Make sure to enter a right Wi-Fi name.</string>
    <string name="error_code_30">"The Wi-Fi name you entered last time cannot be found. Make sure to enter a right Wi-Fi name.</string>
    <string name="enroll_page2_title_line3">Name your device</string>
    <string name="enroll_page2_title_line4">Home Location</string>
    <string name="enroll_page3_title_line1">Connect device to Wi-Fi</string>
    <string name="enroll_name_done">Next</string>
    <string name="enroll_selected">Selected</string>
    <string name="enroll_exit">Exit</string>
    <string name="enroll_update">Update</string>
    <string name="login_forget_password">Forgot password</string>
    <string name="login_new_user">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="log_in">Signing in...</string>
    <string name="register">Sign Up</string>
    <string name="register_nick_name">User name</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="non_activated">Unactivated account! Please activate your account first. If you encountered problems when activating your account, please contact customer care.</string>
    <string name="login_password_invalid">Failed to sign in! Invalid mobile number or password.</string>
    <string name="change_password_invalid">Failed to change password! Invalid old password.</string>
    <string name="password_not_match">Passwords don\'t match! Please retype and try again.</string>
    <string name="renaming">Editing home...</string>
    <string name="name_place">Name your home</string>
    <string name="home_name_empty">Home name cannot be empty!</string>
    <string name="city_not_found">This city cannot be found!</string>
    <string name="enroll_select_city">Please select a location</string>
    <string name="my_device">Living room device</string>
    <string name="enroll_loading">Loading</string>
    <string name="footview_loading">Loading...</string>
    <string name="adding_home">Adding home...</string>
    <string name="deleting_home">Deleting home...</string>
    <string name="delete_device_fail">Failed to delete device(s)! Please try again.</string>
    <string name="device_no_auth">You can only read device data.</string>
    <string name="group_no_auth">You can only read group data.</string>
    <string name="select_location">Select location</string>
    <string name="search">Search&#8230;</string>
    <string name="gps">Location:</string>
    <string name="same_home">This place already existed! </string>
    <string name="device_already_registered_authorize">You cannot enroll a device which has been shared to you!</string>
    <string name="offline_device_already_registered_authorize">You cannot update Wi-Fi info of a shared device!</string>
    <string name="control_manual">Manual</string>
    <string name="control_timeout">Operation time out! Please try again.</string>
    <string name="get_home_at">Reservation time</string>
    <string name="clean_time_prex">Clean up in</string>
    <string name="clean_time_default">20 minutes</string>
    <string name="clean_time_hour">%1$d h</string>
    <string name="clean_time_minute">%1$d mins</string>
    <string name="device_pm25">PM2.5</string>
    <string name="filter_instruction">Filter instruction</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_success">Password changed successfully!</string>
    <string name="reset_password_success">Reset password successfully!</string>
    <string name="tell_air_touch">Set</string>
    <string name="cancel_fail">Failed to cancel!</string>
    <string name="tell_fail">Failed to set time!</string>
    <string name="time_arrive_home">Reservation</string>
    <string name="temp_unit_c">°C</string>
    <string name="sending_sms">Sending SMS...</string>
    <string name="verification_code">Verification code</string>
    <string name="sms_arrive">Your SMS should arrive in 1 minute.</string>
    <string name="sms_code_wrong">Invalid verification code!</string>
    <string name="sms_resend">Resend</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="sms_send_fail">Failed to send out verification code!</string>
    <string name="deleting_device">Deleting device</string>
    <string name="pm25_str">PM2.5</string>
    <string name="weather_today">Today</string>
    <string name="weather_recent">7 days</string>
    <string name="weather_aqi">AQI</string>
    <string name="weather_pm25">PM2.5</string>
    <string name="weather_temperature">%1$d&#8211;%2$d°C</string>
    <string name="group_control_device_mode_home">Home</string>
    <string name="group_control_device_mode_away">Away</string>
    <string name="group_control_device_mode_sleep">Sleep</string>
    <string name="group_control_device_mode_awake">Awake</string>
    <string name="group_name_exist">This group name is already taken. Please enter a different one.</string>
    <string name="version_title">New version available: %s</string>
    <string name="update_now">Update</string>
    <string name="remind_later">Later</string>
    <string name="updating_group_name">Updating group name...</string>
    <string name="group_master_not_delete">Please ungroup this master device and then try to delete it. This operation will ungroup this group.</string>
    <string name="group">Groups</string>
    <string name="setting_clock">Setting...</string>
    <string name="canceling_clock">Cancelling...</string>
    <string name="get_it">Got it</string>
    <string name="arrive_home_unsetted">Set a reservation time. Air purifier devices will clean air at a time set in advance. It’ll keep air clean before the reservation time.</string>
    <string name="arrive_home_settled">Reservation time has been set. Air purifier devices will clean air at a time set in advance. It’ll keep air clean before the reservation time.</string>
    <string name="arrive_time_in30min">Cannot set arrival time within 30 minutes. Please set a longer time.</string>
    <string name="arrive_home_all_device_offline">All of air purifier devices are offline. If they\'re still offline till reservation time, reservation will not take effect.</string>
    <string name="smartlink_inputpassword_str">Please enter the password of your Wi-Fi and then tap Next button.</string>
    <string name="smartlink_password_str">Enter your password</string>
    <string name="scan_title">Align device QR code within frame to scan</string>
    <string name="no_data_device">Unknown device</string>
    <string name="no_support_smart_link">This device doesn’t support Wi-Fi. It cannot be enrolled to app.</string>
    <string name="connect_timeout_title1">Connection Timeout</string>
    <string name="connect_timeout_content">You can try solutions as below or call Customer Care directly.</string>
    <string name="connect_timeout_content1">1. You may entered a wrong password. Please tap Retry button in the bottom to enter password again.</string>
    <string name="connect_timeout_content2">2. Please check if the blue button in the picture below is light up. If not, please press and hold the button for 3 seconds until hear a chime, and then retry.</string>
    <string name="connect_timeout_content3">"4. You can also contact customer care."</string>
    <string name="connect_timeout_content4">"3. This device only support 2.4GHz Wi-Fi network. Please ensure your mobile phone is connected to a 2.4GHz Wi-Fi network."</string>
    <string name="connect_timeout_retry">Retry</string>
    <string name="connect_timeout_contact">AP mode</string>
    <string name="device_register_id">This device is already in your account. Do you want to update Wi-Fi configuration of this device?</string>
    <string name="device_update_wifi_success">Wi-Fi configuration has been updated successfully.</string>
    <string name="samart_next_btn">Next</string>
    <string name="smart_permission_deny_messege">Allow H Plus access to your camera in system privacy settings to start scanning QR code.</string>
    <string name="phone_call_permission_deny">Allow H Plus access to phone services in system settings to dial.</string>
    <string name="already_registed">It seems you\'ve already signed up. Please sign in directly.</string>
    <string name="sms_hint">Your SMS should arrive in 1 minute. If there is a delay or you require support, please call Customer Care between 9am – 6pm, Mon-Sat.</string>
    <string name="no_located_permission_scantxt">Cannot access to location services, allow H Plus access to Location Services in System Settings to continue the enrollment.</string>
    <string name="gps_no_open">Location services off, turn on Location Services in System Settings to continue the enrollment.</string>
    <string name="enroll_qr_code">No QR code?</string>
    <string name="me_comapany_info">Company Info</string>
    <string name="me_comapany_detail">Honeywell International Inc</string>
    <string name="me_copyright">Copyright</string>
    <string name="me_copyright_detail">© 2016 Honeywell International Inc</string>
    <string name="me_version">Version</string>
    <string name="me_new_features">New Features</string>
    <string name="enroll_product_name">Product name:&#160;</string>
    <string name="enroll_device_type">Product type:&#160;</string>
    <string name="enroll_device_model">Model:&#160;</string>
    <string name="enroll_enroll_now">Enroll Now</string>
    <string name="enroll_before_play_content">You can find the QR code in these places:</string>
    <string name="enroll_before_play_step1">1. On device body.</string>
    <string name="enroll_before_play_step2">2. On device package.</string>
    <string name="enroll_before_play_step3">3. In quick user guide.</string>
    <string name="ap_send_wifiinfo_error1">1. You might choosed a wrong Wi-Fi network or entered a wrong password. In this case, you can tap Retry button to retry.</string>
    <string name="check_version_update_now">Update</string>
    <string name="check_version_new_version">New Version</string>
    <string name="mad_air_enroll_pair_fail_detail">1. Make sure your device is power on. If not, you can press and hold power button until hear a chime and power light is flickering.\n\n2. Keep your device close to your phone.</string>
</resources>