<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enroll_page_background">

    <include
        android:id="@+id/title_id"
        layout="@layout/activity_enroll_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_id"
        android:layout_marginBottom="50dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                style="@style/Authorize_big_size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_comapany_info" />

            <TextView
                style="@style/enroll_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/me_comapany_detail" />

            <ImageView
                style="@style/separateline_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Authorize_big_size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/me_copyright" />

            <TextView
                style="@style/enroll_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/me_copyright_detail" />

            <ImageView
                style="@style/separateline_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Authorize_big_size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/me_version" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/me_about_version_detail"
                    style="@style/enroll_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:text="AirTouch01" />

                <TextView
                    android:id="@+id/me_new_features_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="right"
                    android:onClick="doClick"
                    android:text="@string/me_new_features"
                    android:textColor="@color/enroll_blue2"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_about_new_version_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:orientation="vertical">

                <ImageView
                    style="@style/separateline_long"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/Authorize_big_size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/check_version_new_version" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/me_about_new_version_detail"
                        style="@style/enroll_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                         />

                    <TextView
                        android:id="@+id/me_new_install_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="right"
                        android:onClick="doClick"
                        android:text="@string/check_version_update_now"
                        android:textColor="@color/enroll_blue2"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
