<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enroll_page_background"
    android:gravity="center_horizontal">

    <include
        android:id="@+id/enroll_title_id"
        layout="@layout/activity_enroll_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enroll_title_id"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/mad_air_enroll_pair_fail_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mad_air_retry_btn"
            style="@style/blue_buton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doClick"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/connect_timeout_retry" />

        <Button
            android:id="@+id/mad_air_exit_btn"
            style="@style/blue_buton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doClick"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/enroll_exit" />

    </LinearLayout>

</RelativeLayout>