<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:drop="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enroll_page_background">

    <include
        android:id="@+id/title_id"
        layout="@layout/activity_enroll_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_id"
        style="@style/left_right_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_device_tv"
            style="@style/enroll_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/enroll_page2_title_line3" />

        <com.honeywell.hch.airtouch.ui.common.ui.view.HPlusEditText
            android:id="@+id/enroll_device_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:maxLength="14"
            android:singleLine="true"
            app:edit_hint_value="@string/my_device" />


    </LinearLayout>

    <Button
        android:id="@+id/buttom_btn_id"
        style="@style/blue_buton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dip"
        android:text="@string/enroll_next"
        android:visibility="visible" />


</RelativeLayout>